--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -44,7 +44,7 @@ body, html {
   background: #FFF;
 }
 
-div, a, p.button, img, li {@include vendorize(transition, $transition);}
+// div, a, p.button, img, li {@include vendorize(transition, $transition);}
 img {max-width: 100%;}
 
 a, i {
@@ -85,8 +85,11 @@ section {
 $copy-left-spacing: 20px;
 $text-vert-spacing: 2%;
 
+
 .panel, nav {
 	position: fixed; 
+  visibility: hidden; 
+  opacity: 0.0; 
 	height: 100%; 
 	width: 100%;
   max-width: 2000px;
@@ -113,6 +116,12 @@ $text-vert-spacing: 2%;
   }
 } 
 
+.header, nav{
+  visibility: visible; 
+  opacity: 1.0; 
+}
+
+
 // put nav on bottom
 nav {
   top: $text-vert-spacing;
@@ -127,11 +136,20 @@ nav {
 }
 
 
-.info,  {
+
+.info {
   position: fixed;
+  margin-top: 100%; 
   padding: 5%;
+  width: 90%; 
+  z-index: 100;
+  opacity: 1; 
+  visibility: visible; 
+  background-color: #fff; 
+
 
   .container {
+    position: static; 
     width: 50%;
     margin: 0 auto;
     @media screen and (max-width: $break-sm) {
@@ -139,22 +157,17 @@ nav {
     }
     h1 {
       margin-top: 5%;
-    }   
+    }  
+    p {
+      font-size: 1em;
+    } 
   } 
   footer {
     margin: 5% 0;
   }
 
+
 }
-
-
-//extra space bt panels for skrollr
-.separator {
-  height: 300px;
-}
-
-
-
 
 // typography
 
@@ -218,51 +231,51 @@ nav {
 
 .a {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg); 
-  z-index: 100;
+  // z-index: 100;
 }
 
 .b1 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch1.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); 
-  z-index: 99;
+  // z-index: 99;
 }
 
 .b2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch2.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); 
-  z-index: 98;
+  // z-index: 98;
 }
 
 .b3 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); 
-  z-index: 97;
+  // z-index: 97;
 }
 
 .b4 {
 /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
-  z-index: 96;
+  // z-index: 96;
 }
 
 .c {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg); 
-  z-index: 95;
+  // z-index: 95;
 }
 
 .d {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg); 
-  z-index: 94;
+  // z-index: 94;
 }
 
 .e1 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg); 
-  z-index: 92;
+  // z-index: 92;
 }
 
 .e2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg); 
-  z-index: 91;
+  // z-index: 91;
 }
 
-.e3 {  z-index: 90;}
-.f {  z-index: 89;}
+// .e3 {  z-index: 90;}
+// .f {  z-index: 89;}
 
 .a, .b1, .b2, .b3, .c, .d, .e1, .e2 {
   background-position: 50%;
