--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -93,15 +93,6 @@ body, html {
   background: #FFF;
 }
 
-/* line 47, ../sass/screen.scss */
-div, a, p.button, img, li {
-  -webkit-transition: 0.3s ease all;
-  -moz-transition: 0.3s ease all;
-  -ms-transition: 0.3s ease all;
-  -o-transition: 0.3s ease all;
-  transition: 0.3s ease all;
-}
-
 /* line 48, ../sass/screen.scss */
 img {
   max-width: 100%;
@@ -141,87 +132,101 @@ section {
   margin: 0 auto;
 }
 
-/* line 88, ../sass/screen.scss */
+/* line 89, ../sass/screen.scss */
 .panel, nav {
   position: fixed;
+  visibility: hidden;
+  opacity: 0.0;
   height: 100%;
   width: 100%;
   max-width: 2000px;
 }
-/* line 93, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 .panel .container, nav .container {
   position: absolute;
   width: 100%;
 }
-/* line 96, ../sass/screen.scss */
+/* line 99, ../sass/screen.scss */
 .panel .container .copy, nav .container .copy {
   display: block;
 }
-/* line 98, ../sass/screen.scss */
+/* line 101, ../sass/screen.scss */
 .panel .container .copy h1, nav .container .copy h1 {
   max-width: 60% !important;
 }
-/* line 101, ../sass/screen.scss */
+/* line 104, ../sass/screen.scss */
 .panel .container .copy h1, .panel .container .copy p, nav .container .copy h1, nav .container .copy p {
   max-width: 40%;
   display: block;
   margin: 15px 0 0 20px;
 }
-/* line 105, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 .panel .container .copy h1:first-child, .panel .container .copy p:first-child, nav .container .copy h1:first-child, nav .container .copy p:first-child {
   margin-top: 2%;
 }
-/* line 108, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 .panel .container .copy h1 i, .panel .container .copy p i, nav .container .copy h1 i, nav .container .copy p i {
   padding-left: 15px;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 119, ../sass/screen.scss */
+.header, nav {
+  visibility: visible;
+  opacity: 1.0;
+}
+
+/* line 126, ../sass/screen.scss */
 nav {
   top: 2%;
   text-align: right;
   height: 50px;
 }
-/* line 121, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 nav .container {
   padding-top: 20px;
 }
-/* line 124, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 nav a {
   padding: 20px;
 }
 
-/* line 130, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 .info {
   position: fixed;
+  margin-top: 100%;
   padding: 5%;
+  width: 90%;
+  z-index: 100;
+  opacity: 1;
+  visibility: visible;
+  background-color: #fff;
 }
-/* line 134, ../sass/screen.scss */
+/* line 153, ../sass/screen.scss */
 .info .container {
+  position: static;
   width: 50%;
   margin: 0 auto;
 }
 @media screen and (max-width: 750px) {
-  /* line 134, ../sass/screen.scss */
+  /* line 153, ../sass/screen.scss */
   .info .container {
     width: 75%;
   }
 }
-/* line 140, ../sass/screen.scss */
+/* line 160, ../sass/screen.scss */
 .info .container h1 {
   margin-top: 5%;
 }
-/* line 144, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
+.info .container p {
+  font-size: 1em;
+}
+/* line 167, ../sass/screen.scss */
 .info footer {
   margin: 5% 0;
 }
 
-/* line 152, ../sass/screen.scss */
-.separator {
-  height: 300px;
-}
-
-/* line 161, ../sass/screen.scss */
+/* line 176, ../sass/screen.scss */
 body {
   font-size: 16px;
   color: #191e24;
@@ -229,123 +234,104 @@ body {
   font-weight: 400;
 }
 
-/* line 169, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .header h1 {
   font-size: 3em;
 }
-/* line 171, ../sass/screen.scss */
+/* line 186, ../sass/screen.scss */
 .header h1 i {
   font-size: .8em;
 }
 
-/* line 178, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 nav a {
   color: #191e24;
   text-transform: uppercase;
 }
 
-/* line 184, ../sass/screen.scss */
+/* line 199, ../sass/screen.scss */
 .panel p {
   font-size: 2em;
 }
-/* line 186, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 .panel p i {
   font-size: 0.8em;
 }
 
-/* line 191, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 .info {
   text-align: left;
   font-size: .8em;
 }
 
-/* line 196, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 footer {
   font-size: 80%;
 }
 
-/* line 204, ../sass/screen.scss */
+/* line 219, ../sass/screen.scss */
 nav {
   z-index: 102;
 }
 
-/* line 208, ../sass/screen.scss */
+/* line 223, ../sass/screen.scss */
 .dark, .dark a {
   background: #191e24;
   color: #e5eaee;
 }
 
-/* line 213, ../sass/screen.scss */
+/* line 228, ../sass/screen.scss */
 .light {
   background: #e5eaee;
   color: #191e24;
 }
 
-/* line 219, ../sass/screen.scss */
+/* line 234, ../sass/screen.scss */
 .a {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg);
-  z-index: 100;
-}
-
-/* line 224, ../sass/screen.scss */
-.b1 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch1.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
-  z-index: 99;
-}
-
-/* line 229, ../sass/screen.scss */
-.b2 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch2.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
-  z-index: 98;
-}
-
-/* line 234, ../sass/screen.scss */
-.b3 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
-  z-index: 97;
 }
 
 /* line 239, ../sass/screen.scss */
-.b4 {
-  /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
-  z-index: 96;
+.b1 {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch1.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
 }
 
 /* line 244, ../sass/screen.scss */
-.c {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg);
-  z-index: 95;
+.b2 {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch2.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
 }
 
 /* line 249, ../sass/screen.scss */
-.d {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg);
-  z-index: 94;
+.b3 {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
 }
 
 /* line 254, ../sass/screen.scss */
-.e1 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
-  z-index: 92;
+.b4 {
+  /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
 }
 
 /* line 259, ../sass/screen.scss */
-.e2 {
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
-  z-index: 91;
+.c {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg);
 }
 
 /* line 264, ../sass/screen.scss */
-.e3 {
-  z-index: 90;
+.d {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg);
 }
 
-/* line 265, ../sass/screen.scss */
-.f {
-  z-index: 89;
+/* line 269, ../sass/screen.scss */
+.e1 {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
 }
 
-/* line 267, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
+.e2 {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
+}
+
+/* line 282, ../sass/screen.scss */
 .a, .b1, .b2, .b3, .c, .d, .e1, .e2 {
   background-position: 50%;
   -webkit-background-size: cover;
