--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -140,12 +140,17 @@ nav {
 .info {
   position: fixed;
   margin-top: 100%; 
-  padding: 5%;
-  width: 90%; 
+  padding: 0;
+  width: 100%; 
+  height: 100%; 
   z-index: 100;
   opacity: 1; 
   visibility: visible; 
   background-color: #fff; 
+
+  .spacer{
+    height: 20px; 
+  }
 
 
   .container {
@@ -155,9 +160,9 @@ nav {
     @media screen and (max-width: $break-sm) {
       width: 75%;
     }
-    h1 {
-      margin-top: 5%;
-    }  
+    // h1 {
+    //   margin-top: ;
+    // }  
     p {
       font-size: 1em;
     } 
