--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -194,39 +194,40 @@ nav a {
 .info {
   position: fixed;
   margin-top: 100%;
-  padding: 5%;
-  width: 90%;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   z-index: 100;
   opacity: 1;
   visibility: visible;
   background-color: #fff;
 }
-/* line 153, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
+.info .spacer {
+  height: 20px;
+}
+/* line 156, ../sass/screen.scss */
 .info .container {
   position: static;
   width: 50%;
   margin: 0 auto;
 }
 @media screen and (max-width: 750px) {
-  /* line 153, ../sass/screen.scss */
+  /* line 156, ../sass/screen.scss */
   .info .container {
     width: 75%;
   }
 }
-/* line 160, ../sass/screen.scss */
-.info .container h1 {
-  margin-top: 5%;
-}
-/* line 163, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 .info .container p {
   font-size: 1em;
 }
-/* line 167, ../sass/screen.scss */
+/* line 170, ../sass/screen.scss */
 .info footer {
   margin: 5% 0;
 }
 
-/* line 176, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 body {
   font-size: 16px;
   color: #191e24;
@@ -234,104 +235,104 @@ body {
   font-weight: 400;
 }
 
-/* line 184, ../sass/screen.scss */
+/* line 187, ../sass/screen.scss */
 .header h1 {
   font-size: 3em;
 }
-/* line 186, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 .header h1 i {
   font-size: .8em;
 }
 
-/* line 193, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 nav a {
   color: #191e24;
   text-transform: uppercase;
 }
 
-/* line 199, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 .panel p {
   font-size: 2em;
 }
-/* line 201, ../sass/screen.scss */
+/* line 204, ../sass/screen.scss */
 .panel p i {
   font-size: 0.8em;
 }
 
-/* line 206, ../sass/screen.scss */
+/* line 209, ../sass/screen.scss */
 .info {
   text-align: left;
   font-size: .8em;
 }
 
-/* line 211, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 footer {
   font-size: 80%;
 }
 
-/* line 219, ../sass/screen.scss */
+/* line 222, ../sass/screen.scss */
 nav {
   z-index: 102;
 }
 
-/* line 223, ../sass/screen.scss */
+/* line 226, ../sass/screen.scss */
 .dark, .dark a {
   background: #191e24;
   color: #e5eaee;
 }
 
-/* line 228, ../sass/screen.scss */
+/* line 231, ../sass/screen.scss */
 .light {
   background: #e5eaee;
   color: #191e24;
 }
 
-/* line 234, ../sass/screen.scss */
+/* line 237, ../sass/screen.scss */
 .a {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg);
 }
 
-/* line 239, ../sass/screen.scss */
+/* line 242, ../sass/screen.scss */
 .b1 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch1.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
 }
 
-/* line 244, ../sass/screen.scss */
+/* line 247, ../sass/screen.scss */
 .b2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch2.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
 }
 
-/* line 249, ../sass/screen.scss */
+/* line 252, ../sass/screen.scss */
 .b3 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3.png), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
 }
 
-/* line 254, ../sass/screen.scss */
+/* line 257, ../sass/screen.scss */
 .b4 {
   /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
 }
 
-/* line 259, ../sass/screen.scss */
+/* line 262, ../sass/screen.scss */
 .c {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg);
 }
 
-/* line 264, ../sass/screen.scss */
+/* line 267, ../sass/screen.scss */
 .d {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg);
 }
 
-/* line 269, ../sass/screen.scss */
+/* line 272, ../sass/screen.scss */
 .e1 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
 }
 
-/* line 274, ../sass/screen.scss */
+/* line 277, ../sass/screen.scss */
 .e2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
 }
 
-/* line 282, ../sass/screen.scss */
+/* line 285, ../sass/screen.scss */
 .a, .b1, .b2, .b3, .c, .d, .e1, .e2 {
   background-position: 50%;
   -webkit-background-size: cover;
