--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -210,10 +210,11 @@ nav a {
 }
 /* line 163, ../sass/screen.scss */
 .info .spacer {
-  height: 20px;
+  height: 10%;
 }
 /* line 168, ../sass/screen.scss */
 .info .container {
+  height: 80%;
   position: static;
   width: 50%;
   margin: 0 auto;
@@ -224,9 +225,11 @@ nav a {
     width: 75%;
   }
 }
-/* line 178, ../sass/screen.scss */
+/* line 176, ../sass/screen.scss */
 .info .container p {
   font-size: 1em;
+  width: 80%;
+  margin-left: 10%;
 }
 /* line 182, ../sass/screen.scss */
 .info footer {
