--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,8 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
 @import "compass/reset";
 
 // fonts
@@ -19,12 +14,13 @@ $light: rgb(229,234,238);
 $break-med: 1000px;
 $break-sm: 750px;
 
+
 @mixin vendorize($property, $value) {
-	-webkit-#{$property}: $value;
-	-moz-#{$property}: $value;
-	-ms-#{$property}: $value;
-	-o-#{$property}: $value;
-	#{$property}: $value;
+  -webkit-#{$property}: $value;
+  -moz-#{$property}: $value;
+  -ms-#{$property}: $value;
+  -o-#{$property}: $value;
+  #{$property}: $value;
 }
 
 @mixin selection($color, $background) {
@@ -72,10 +68,10 @@ body {
 
 // forces heights 
 section {
-	width: 100%;
+  width: 100%;
   height: 800px;
   padding: 0; 
-	// padding: 55vh 0;
+  // padding: 55vh 0;
 }
 
 .container {
@@ -89,11 +85,11 @@ $text-vert-spacing: 2%;
 
 
 .panel, nav {
-	position: fixed; 
+  position: fixed; 
   visibility: hidden; 
   opacity: 0.0; 
-	height: 100%; 
-	width: 100%;
+  height: 100%; 
+  width: 100%;
   max-width: 2000px;
   .container {
     position: absolute;
@@ -113,19 +109,23 @@ $text-vert-spacing: 2%;
         i {
           padding-left: 15px;
         }
+        &.nav { // arrow navigation between panels
+          margin-top: 0;
+          a:first-child i {
+            padding-right: 15px;
+            padding-left: 0 !important;
+          }
+          a:nth-child(2) i {
+            padding-left: 15px;
+          }
+        }
+        &.nav-only { // add spacing when it's only arrows
+          margin-top: $text-vert-spacing;
+        }
       }
     }
   }
 } 
-
-
-.info {
-    img {
-    width: 80%;
-    margin-left: 10%;
-  }
-}
-
 
 
 .header, nav{
@@ -134,16 +134,23 @@ $text-vert-spacing: 2%;
 }
 
 
-// put nav on bottom
+// nav pos
 nav {
   top: $text-vert-spacing;
   text-align: right;
   height: 50px;
+  width: auto;
+  right: 0;
   .container { 
     padding-top: 20px;
+    width: auto;
+    right: 0;
   }
-  a {
+  a, i {
     padding: $copy-left-spacing;
+  }
+  .info-link {
+    text-align: center;
   }
 }
 
@@ -166,27 +173,35 @@ nav {
 
 
   .container {
-    height: 80%; 
     position: static; 
-    width: 50%;
     margin: 0 auto;
     @media screen and (max-width: $break-sm) {
       width: 75%;
     }
-    p {
+    h1, p {
+      margin: 0 auto 2% auto;
+      width: 50%;
+    }
+    h1 {
       font-size: 1em;
-      width: 80%; 
-      margin-left: 10%; 
+    }
+    p {
+      font-size: 1.3em;
+      line-height: 1.3em;
+      font-weight: 400;
     } 
+    .footer {
+      font-size: 0.7em;
+    }
   } 
-  footer {
-    margin: 5% 0;
-  }
-
-
 }
 
+
+
+
 // typography
+
+$bigtext: 3em;
 
 body {
   font-size: 16px;
@@ -197,7 +212,7 @@ body {
 
 .header {
   h1 {
-		font-size: 3em;
+    font-size: $bigtext;
     i {
       font-size: .8em;
     }
@@ -211,8 +226,14 @@ nav {
   }
 }
 
+.dark .container .copy p {
+  max-width: 70%;
+  font-size: $bigtext;
+}
+
 .panel p {
   font-size: 2em;
+  line-height: 1.2em;
   i {
     font-size: 0.8em;
   }
@@ -235,9 +256,16 @@ nav {
   z-index: 102;
 }
 
-.dark, .dark a  {
+.dark {
   background: $dark;
   color: $light;
+  a, i {
+    color: $light;
+    background: none;
+  }
+  p.second {
+    margin-top: 15% !important;
+  }
 }
 
 .light {
@@ -276,6 +304,11 @@ nav {
   // z-index: 95;
 }
 
+.c2 {
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c2.jpg); 
+  // z-index: 95;
+}
+
 .d {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg); 
   // z-index: 94;
@@ -291,10 +324,7 @@ nav {
   // z-index: 91;
 }
 
-// .e3 {  z-index: 90;}
-// .f {  z-index: 89;}
-
-.a, .b1, .b2, .b3, .c, .d, .e1, .e2 {
+.a, .b1, .b2, .b3, .c, .c2, .d, .e1, .e2 {
   background-position: 50%;
   @include vendorize(background-size,cover);
 }
