--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -201,17 +201,11 @@ nav .container {
   padding-top: 20px;
   width: auto;
   right: 0;
-}
-/* line 149, ../sass/screen.scss */
-nav a, nav i {
-  padding: 20px;
-}
-/* line 152, ../sass/screen.scss */
-nav .info-link {
   text-align: center;
+  width: 100px;
 }
 
-/* line 159, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 .info {
   position: fixed;
   margin-top: 100%;
@@ -223,42 +217,42 @@ nav .info-link {
   visibility: visible;
   background-color: #fff;
 }
-/* line 170, ../sass/screen.scss */
+/* line 173, ../sass/screen.scss */
 .info .spacer {
   height: 10%;
 }
-/* line 175, ../sass/screen.scss */
+/* line 178, ../sass/screen.scss */
 .info .container {
   position: static;
   margin: 0 auto;
 }
 @media screen and (max-width: 750px) {
-  /* line 175, ../sass/screen.scss */
+  /* line 178, ../sass/screen.scss */
   .info .container {
     width: 75%;
   }
 }
-/* line 181, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .info .container h1, .info .container p {
   margin: 0 auto 2% auto;
   width: 50%;
 }
-/* line 185, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 .info .container h1 {
   font-size: 1em;
 }
-/* line 188, ../sass/screen.scss */
+/* line 191, ../sass/screen.scss */
 .info .container p {
   font-size: 1.3em;
   line-height: 1.3em;
   font-weight: 400;
 }
-/* line 193, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 .info .container .footer {
   font-size: 0.7em;
 }
 
-/* line 206, ../sass/screen.scss */
+/* line 209, ../sass/screen.scss */
 body {
   font-size: 16px;
   color: #191e24;
@@ -266,75 +260,75 @@ body {
   font-weight: 400;
 }
 
-/* line 214, ../sass/screen.scss */
+/* line 217, ../sass/screen.scss */
 .header h1 {
   font-size: 3em;
 }
-/* line 216, ../sass/screen.scss */
+/* line 219, ../sass/screen.scss */
 .header h1 i {
   font-size: .8em;
 }
 
-/* line 223, ../sass/screen.scss */
+/* line 226, ../sass/screen.scss */
 nav a {
   color: #191e24;
   text-transform: uppercase;
 }
 
-/* line 229, ../sass/screen.scss */
+/* line 232, ../sass/screen.scss */
 .dark .container .copy p {
   max-width: 70%;
   font-size: 3em;
 }
 
-/* line 234, ../sass/screen.scss */
+/* line 237, ../sass/screen.scss */
 .panel p, .m-b p, .marlene p {
   font-size: 2em;
   line-height: 1.2em;
 }
-/* line 237, ../sass/screen.scss */
+/* line 240, ../sass/screen.scss */
 .panel p i, .m-b p i, .marlene p i {
   font-size: 0.8em;
 }
 
-/* line 242, ../sass/screen.scss */
+/* line 245, ../sass/screen.scss */
 .info {
   text-align: left;
   font-size: .8em;
 }
 
-/* line 247, ../sass/screen.scss */
+/* line 250, ../sass/screen.scss */
 footer {
   font-size: 80%;
 }
 
-/* line 255, ../sass/screen.scss */
+/* line 258, ../sass/screen.scss */
 nav {
   z-index: 102;
 }
 
-/* line 259, ../sass/screen.scss */
+/* line 262, ../sass/screen.scss */
 .dark {
   background: #191e24;
   color: #e5eaee;
 }
-/* line 262, ../sass/screen.scss */
+/* line 265, ../sass/screen.scss */
 .dark a, .dark i {
   color: #e5eaee;
   background: none;
 }
-/* line 266, ../sass/screen.scss */
+/* line 269, ../sass/screen.scss */
 .dark p.second {
   margin-top: 15% !important;
 }
 
-/* line 271, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 .light {
   background: #e5eaee;
   color: #191e24;
 }
 
-/* line 276, ../sass/screen.scss */
+/* line 279, ../sass/screen.scss */
 .m-b {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg);
   background-position: 50%;
@@ -345,7 +339,7 @@ nav {
   background-size: cover;
 }
 
-/* line 283, ../sass/screen.scss */
+/* line 286, ../sass/screen.scss */
 .marlene {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_e.jpg);
   background-position: 50%;
@@ -356,47 +350,47 @@ nav {
   background-size: cover;
 }
 
-/* line 290, ../sass/screen.scss */
+/* line 293, ../sass/screen.scss */
 .a {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_a.jpg);
 }
 
-/* line 295, ../sass/screen.scss */
+/* line 298, ../sass/screen.scss */
 .b1 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch1.png);
 }
 
-/* line 300, ../sass/screen.scss */
+/* line 303, ../sass/screen.scss */
 .b2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch2.png);
 }
 
-/* line 305, ../sass/screen.scss */
+/* line 308, ../sass/screen.scss */
 .b3 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b-sketch3.png);
 }
 
-/* line 310, ../sass/screen.scss */
+/* line 313, ../sass/screen.scss */
 .b4 {
   /*  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_b.jpg); */
 }
 
-/* line 315, ../sass/screen.scss */
+/* line 318, ../sass/screen.scss */
 .c {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c.jpg);
 }
 
-/* line 320, ../sass/screen.scss */
+/* line 323, ../sass/screen.scss */
 .c2 {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_c2.jpg);
 }
 
-/* line 325, ../sass/screen.scss */
+/* line 328, ../sass/screen.scss */
 .d {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/95495/mb_d.jpg);
 }
 
-/* line 338, ../sass/screen.scss */
+/* line 341, ../sass/screen.scss */
 .a, .b1, .b2, .b3, .c, .c2, .d, .e1, .e2, .marlene, .mb {
   background-position: 50%;
   -webkit-background-size: cover;
